--- a/colemakdh.conf
+++ b/colemakdh.conf
@@ -1,6 +1,6 @@
 (defcfg
-  input (device-file "/dev/input/by-id/< kbd-id >")
-  output (uinput-sink "Name" )
+  input (device-file "/dev/input/by-id/usb-BY_Tech_NuPhy_Halo75-event-kbd")
+  output (uinput-sink "Colemak DH" )
 )
 
 (defsrc
@@ -13,11 +13,11 @@
 )
 
 (deflayer default
-  esc  f1   f2   f3   f4   f5   f6   f7   f8   f9   f10  f11  f12        ssrq slck pause
+  caps f1   f2   f3   f4   f5   f6   f7   f8   f9   f10  f11  f12        ssrq slck pause
   grv  1    2    3    4    5    6    7    8    9    0    -    =    bspc  ins  home pgup
-  tab  q    w    e    r    t    y    u    i    o    p    [    ]    \     del  end  pgdn 
-  @caps a   s    d    f    g    h    j    k    l    ;    '    ret                      
-  lsft z    x    c    v    b    n    m    ,    .    @/   rsft                 up         
+  tab  q    w    f    p    b    j    l    u    y    ;    [    ]    \     del  end  pgdn 
+  @esc a    r    s    t    g    m    n    e    i    o    '    ret                      
+  lsft x    c    d    v    z    k    h    ,    .    @/   rsft                 up         
   lctl lalt lmet           spc            rmet ralt cmp  rctl            left down rght 
 )
 
@@ -25,20 +25,20 @@
 
 (deflayer numbers
   _    _    _    _    _    _    _    _    _    _    _    _    _          _    _    _
-  esc  f1   f2   f3   f4   f5   f6   f7   f8   f9   f10  f11  f12        _    _    _
+  _    f1   f2   f3   f4   f5   f6   f7   f8   f9   f10  f11  f12  _     _    _    _
   _    1    2    3    =    _    #    $    %    `    _    _    \    _     _    _    _
-  _    4    5    6    -    _    |    \(   \)   [    ]    _    _
+  esc  4    5    6    -    _    |    \(   \)   [    ]    _    _
   _    7    8    9    0    _    _    *    @    !    ;    _                    _          
   _    _    _              _              _    _    _    _               _    _    _     
 )
 
-(defalias caps (tap-hold 200 caps (layer-toggle vim)))
+(defalias esc (tap-hold 200 esc (layer-toggle vim)))
 
 (deflayer vim
   _    _    _    _    _    _    _    _    _    _    _    _    _          _    _    _
   _    _    _    _    _    _    _    _    _    _    _    _    _    _     _    _    _     
   _    _    _    _    _    _    _    _    _    _    _    _    _    _     _    _    _     
-  _    _    _    _    _    _    _    m    y    n    u    _    _                          
+  _    _    _    _    _    _    _    h    j    k    l    _    _                          
   _    _    _    _    _    _    _    _    _    _    _    _                    _          
   _    _    _              _              _    _    _    _               _    _    _     
 )
